# opendev

./: .gitignore  README.md  agents.md  providers.json  pyproject.toml  run.py  tips.json
Formula/: opendev.rb
app/: __main__.py
app/core/: __init__.py  http_service.py  prompt_builder.py  runtime_config.py
app/logic/: ai_handler.py  command_handler.py  mode_manager.py  tool_orchestrator.py  turn_orchestrator.py
app/mcp/: __init__.py  client.py
app/models/: __init__.py
app/prompts/: __init__.py  agents.py  system.py
app/storage/: storage.py
app/storage/internal/: database.py  encryption.py
app/tools/: __init__.py  agent_tools.py  code_tools.py  exec_tools.py  file_tools.py  tool_manager.py
app/ui/: __init__.py  app.py  screens.py  style.tcss  widgets.py
app/utils/: __init__.py  config.py  file_search.py  logger.py  project_context.py  session_stats.py  updater.py
artifacts/: sha256.txt
artifacts/v0.0.1/: sha256.txt
scripts/: build.sh
