[project]
name = "opendev-cli"
version = "0.1.4"
description = "AI-powered CLI application with TUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.100.0",
    "rich>=13.0.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "keyring>=25.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.scripts]
opendev = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
